--- a/codeField.html
+++ b/codeField.html
@@ -4,4 +4,4 @@
 	%copySpace3(<img src="http://i.imgur.com/VtM1S28.png" title="Копировать с 3 пробелами">)%
 </div>
 <pre><code>%code%</code></pre>
-<script src="https://rawgit.com/jollycoder/JsForCodeBox/master/codeBox.js"></script>
+<script src="https://cdn.rawgit.com/jollycoder/JsForCodeBox/09229653/codeBox.js"></script>
