--- a/codeField.html
+++ b/codeField.html
@@ -1,4 +1,11 @@
-<div>
+$('.brd').css("width", document.body.clientWidth < 1740 ? "90%" : "70%");
+$(".postbody, .posthead").css("margin-left", "180px");
+$(".post-byline, .post-author").css("margin-left", "-180px").css("padding-left", 0).css("width", "160px");
+$(".postfoot").css("padding-left", "180px");
+$(".codebox").css("padding-top", "0").css("border", "2px solid #acf").css("border-radius", "5px");
+$(".codebox > pre > code").css("font-family", "Droid Sans Mono").css("font-size", "12px !important");
+
+CodeParse('<div style="margin-top:-4px; border-bottom:2px solid #acf; white-space: wrap-word !important; font-size: 12px !important; line-height: 36px;" %bottom%>
     %copySection(<img src="data:image/png;base64,
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAC70lEQVR42m2TW0gU
         YRTH/9/MuLO5rrvrZhSlPkSRkolpUEFF9GhE0UblpVbXLuJThFJRPiRBWFDRTbwh
@@ -56,7 +63,4 @@
         QDuqymzQJ6/DLacf6fromm0bjc6tpRp9KAIs+MKYmvetOt33nU7XxPVxx8hVx9WT
         g63NB6fJp5cDaHpO+4+yDn69xKSn8YgnAXnugX9/ki765vTMzG+jjvGB6/1XBv3u
         HoeSttp4zoex9ndw6sNXQP4rzabjS8hK57Fvu4Yo9hCfTvGV/VcoWp+1KKFbgUr5
-        74Yo9mxgFOkj9je06aHJO4pb8AAAAABJRU5ErkJggg==" title="Копировать с 3 пробелами">)%
-</div>
-<pre><code>%code%</code></pre>
-<script src="https://cdn.rawgit.com/jollycoder/JsForCodeBox/09229653/codeBox.js"></script>
+        74Yo9mxgFOkj9je06aHJO4pb8AAAAABJRU5ErkJggg==" title="Копировать с 3 пробелами">)% <br></div><br>%code%');
